fix: remove gap beneath form image

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -123,6 +123,7 @@ textarea {
 		position: relative;
 		overflow: hidden;
 		padding: 56.24% 0 0 0;
+		margin: 0;
 
 		img {
 			display: block;
